[gd_scene load_steps=25 format=2]

[ext_resource path="res://Recursos/Fuentes/Montserrat-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Recursos/Imagenes/Logo esquina EPT.png" type="Texture" id=2]
[ext_resource path="res://Recursos/Iconos/list.png" type="Texture" id=3]
[ext_resource path="res://Pantalla/PantallaDocente.gd" type="Script" id=4]
[ext_resource path="res://Recursos/Iconos/cargarNota.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Iconos/cursos.png" type="Texture" id=6]
[ext_resource path="res://Recursos/Iconos/cursosHorarios.png" type="Texture" id=7]
[ext_resource path="res://Recursos/Iconos/salir.png" type="Texture" id=8]
[ext_resource path="res://Recursos/Iconos/horarios.png" type="Texture" id=9]

[sub_resource type="StyleBoxLine" id=1]
thickness = 4

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.509804 )

[sub_resource type="DynamicFont" id=8]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 5.0
bg_color = Color( 1, 1, 1, 0.392157 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0.192157 )
border_width_right = 3
border_width_bottom = 10
border_color = Color( 0.0666667, 0.262745, 0.501961, 1 )
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 10.0
bg_color = Color( 0, 0, 0, 0.192157 )

[sub_resource type="StyleBoxFlat" id=15]
content_margin_left = 5.0
bg_color = Color( 1, 0.027451, 0, 0.392157 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 0.192157 )
border_width_right = 2
border_width_bottom = 8
border_color = Color( 0.709804, 0.101961, 0.101961, 1 )
corner_radius_top_right = 4
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id=12]
resource_name = "desplegar"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MenuLateral/Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( -540, 150 ), Vector2( 0, 150 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "replegar"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MenuLateral/Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 150 ), Vector2( -540, 150 ) ]
}

[node name="PantallaDocente" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Fondo" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="Fondo"]
margin_right = 1080.0
margin_bottom = 1920.0
color = Color( 0.184314, 0.823529, 1, 1 )

[node name="BarraSuperior" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="BarraSuperior"]
margin_right = 1080.0
margin_bottom = 150.0
color = Color( 0.980392, 0.984314, 0.984314, 1 )

[node name="HSeparator" type="HSeparator" parent="BarraSuperior"]
margin_left = -1.0
margin_top = 146.0
margin_right = 1079.0
margin_bottom = 150.0
custom_styles/separator = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="BarraSuperior"]
margin_left = 485.0
margin_top = 15.0
margin_right = 597.0
margin_bottom = 132.0
texture = ExtResource( 2 )

[node name="ButtonMenuLateral" type="Button" parent="BarraSuperior"]
margin_left = 24.0
margin_top = 24.0
margin_right = 124.0
margin_bottom = 122.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="SpriteMenuLateral" type="Sprite" parent="BarraSuperior/ButtonMenuLateral"]
position = Vector2( 50, 49 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="MenuLateral" type="Node" parent="."]

[node name="Panel" type="Panel" parent="MenuLateral"]
margin_left = -540.0
margin_top = 150.0
margin_bottom = 1920.0
custom_styles/panel = SubResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="MenuLateral/Panel"]
margin_right = 540.0
margin_bottom = 1770.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="ButtonHorarios" type="Button" parent="MenuLateral/Panel/VBoxContainer"]
margin_right = 540.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )
mouse_filter = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 18
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Horarios"
icon = ExtResource( 9 )
align = 0

[node name="ButtonCargarNotas" type="Button" parent="MenuLateral/Panel/VBoxContainer"]
margin_top = 102.0
margin_right = 540.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 90 )
mouse_filter = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 18
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Cargar notas"
icon = ExtResource( 5 )
align = 0

[node name="ButtonCursos" type="Button" parent="MenuLateral/Panel/VBoxContainer"]
margin_top = 204.0
margin_right = 540.0
margin_bottom = 294.0
rect_min_size = Vector2( 0, 90 )
mouse_filter = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 18
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Cursos"
icon = ExtResource( 6 )
align = 0

[node name="ButtonCombinado" type="Button" parent="MenuLateral/Panel/VBoxContainer"]
margin_top = 306.0
margin_right = 540.0
margin_bottom = 396.0
rect_min_size = Vector2( 0, 90 )
mouse_filter = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 18
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Cursos y horarios"
icon = ExtResource( 7 )
align = 0

[node name="ButtonSalir" type="Button" parent="MenuLateral/Panel/VBoxContainer"]
margin_top = 408.0
margin_right = 540.0
margin_bottom = 498.0
rect_min_size = Vector2( 0, 90 )
mouse_filter = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
text = "Salir"
icon = ExtResource( 8 )

[node name="TablaHorarios" type="Node" parent="."]

[node name="CargarNotas" type="Node" parent="."]

[node name="TablaCursos" type="Node" parent="."]

[node name="TablaCursosHorarios" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/desplegar = SubResource( 12 )
anims/replegar = SubResource( 13 )

[connection signal="pressed" from="BarraSuperior/ButtonMenuLateral" to="." method="_on_ButtonMenuLateral_pressed"]
